deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: root-app
spec:
  selector:
    matchLabels:
      app: root-app
  template:
    metadata:
      labels:
        app: root-app
    spec:
      containers:
        - name: root-app
          image: ryanisfluffy/single-spa-image:v0.0.28
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
