service.yaml
apiVersion: v1
kind: Service
metadata:
  name: root-app
spec:
  selector:
    app: root-app
  ports:
    - port: 80
      targetPort: 8080
